@@ -737,8 +737,9 @@ make distributions       - Builds and configures TWE with all documentations and
    <target name="create.components" unless="${rebranding}">
       <property name="dist.component.dir" location="${dist.dir}/components"/>
       <property name="component.dir" location="${basedir}/components"/>
-      <mkdir dir="${dist.component.dir}"/>
-      <copy todir="${dist.component.dir}/${app.name}-core">
+      <property name="tmp.component.dir" location="${component.dir}/tmp"/>
+      <mkdir dir="${tmp.component.dir}"/>
+      <copy todir="${tmp.component.dir}/${app.name}-core">
          <fileset dir="${build.dir}/lib">
             <include name="twecore.jar" />
             <include name="twelan.jar" />
@@ -748,7 +749,7 @@ make distributions       - Builds and configures TWE with all documentations and
          <fileset dir="${component.dir}" includes="Component.properties" />  
          <fileset dir="${basedir}/licenses" includes="GPL-3.0.txt" />  
       </copy>
-      <replace file="${dist.component.dir}/${app.name}-core/Component.properties" value="">
+      <replace file="${tmp.component.dir}/${app.name}-core/Component.properties" value="">
          <replacefilter token="@COMPONENTNAME@" value="${app.name}-core" />
          <replacefilter token="@VERSION@" value="${version}-${release}" />
          <replacefilter token="@TIMESTAMP@" value="${build.timestamp}" />
@@ -760,19 +761,19 @@ make distributions       - Builds and configures TWE with all documentations and
          <fileset dir="${input.dir}" includes="*.bat,*.sh" />
       </copy>
       <chmod dir="${build.dir}" perm="a=rx" includes="*.bin,*.sh" />
-      <zip destfile="${dist.component.dir}/${app.name}-zip/${app.name}.zip" update="true">
+      <zip destfile="${tmp.component.dir}/${app.name}-zip/${app.name}.zip" update="true">
          <zipfileset dir="${build.dir}" prefix="${app.name}-${version}-${release}" excludes="**/doc/api/**" />
       </zip>
-      <copy todir="${dist.component.dir}/${app.name}-zip">
+      <copy todir="${tmp.component.dir}/${app.name}-zip">
          <fileset dir="${component.dir}" includes="Component.properties" />  
          <fileset dir="${basedir}/licenses" includes="GPL-3.0.txt" />  
       </copy>
-      <replace file="${dist.component.dir}/${app.name}-zip/Component.properties" value="">
+      <replace file="${tmp.component.dir}/${app.name}-zip/Component.properties" value="">
          <replacefilter token="@COMPONENTNAME@" value="${app.name}-zip" />
          <replacefilter token="@VERSION@" value="${version}-${release}" />
          <replacefilter token="@TIMESTAMP@" value="${build.timestamp}" />
       </replace>
-      <copy todir="${dist.component.dir}">
+      <copy todir="${tmp.component.dir}">
          <fileset dir="${tools.dir}">
             <include name="batik/**" />
             <include name="jeditsyntax/**" />
@@ -781,7 +782,12 @@ make distributions       - Builds and configures TWE with all documentations and
             <include name="xerces/**" />
             <include name="xml-commons/**" />
          </fileset>
-      </copy>   
+      </copy>  
+      <zip destfile="${dist.component.dir}/${app.name}-${version}-${release}.comp.zip" update="true">
+         <zipfileset dir="${tmp.component.dir}"/>
+      </zip>
+      <delete dir="${tmp.component.dir}"/>
+      
    </target>
    
    <target name="signexe" unless="${rebranding}">
